DE-267 #comment needed to stop editing the table once the OK button is clicked. Also added a better progress bar and allow the user to type into the combobox to set their own A and F parts without waiting for the load to finish.